--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,8 @@
   "author": "Joe Turner <jturner@thinkful.com>",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^1.0.2",
+    "body-parser": "^1.17.2",
     "express": "^4.14.1",
     "mongoose": "^4.11.5",
     "nodemon": "^1.11.0"
