--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "heroku-postbuild": "npm run install",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm run build",
     "dev": "run-p dev:server dev:client start",
     "dev:client": "cd client && cross-env BROWSER=none npm start -- --color=always | xp http://localhost:3000/ http://localhost:8080/",
     "dev:server": "cd server && npm start",
     "install": "run-s install:server install:client",
     "install:server": "cd server && npm install",
-    "install:client": "cd client && npm install --only=dev && npm run build"
+    "install:client": "cd client && npm install"
   },
   "cacheDirectories": [
     "node_modules",
@@ -21,10 +21,15 @@
   "author": "Joe Turner <jturner@thinkful.com>",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "cross-env": "^3.1.4",
     "express": "^4.14.1",
     "http-proxy-middleware": "^0.17.3",
+    "jsonwebtoken": "^7.4.1",
+    "mongoose": "^4.11.5",
     "npm-run-all": "^4.0.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "xp": "^1.0.1"
   }
 }
