--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.14.1",
     "mongoose": "^4.11.5",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "passport-http": "^0.3.0"
   }
 }
