--- a/package.json
+++ b/package.json
@@ -33,5 +33,11 @@
     "passport-local": "^1.0.0",
     "react-router": "^3.0.5",
     "xp": "^1.0.1"
+  },
+  "devDependencies": {
+    "css-loader": "^0.28.5",
+    "moment": "^2.18.1",
+    "react-big-calendar": "^0.14.4",
+    "style-loader": "^0.18.2"
   }
 }
