--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,9 @@
   },
   "dependencies": {
     "jquery": "^3.2.1",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^15.6.1",
+    "react-big-calendar": "^0.15.0",
+    "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
