--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,12 @@
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "homepage": "https://mthintoncoding.github.io/Trello-Board/public/index.html"
 }
