--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cross-env": "^3.1.4",
     "express": "^4.14.1",
     "express-session": "^1.15.5",
+    "gh-pages": "^1.0.0",
     "http-proxy-middleware": "^0.17.3",
     "jsonwebtoken": "^7.4.1",
     "mongoose": "^4.11.5",
