--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react": "^15.6.1",
     "react-big-calendar": "^0.15.0",
     "react-dom": "^15.6.1",
+    "react-player": "^0.25.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
